--- a/CSS/base.css
+++ b/CSS/base.css
@@ -60,8 +60,13 @@ Icon Hosting Google */
     --darkBlue: #2B4570;
     --lightBlue: #BBC4DD;
     --darkGreen: #869D7A;
-    --lightGreen: #BCDBAC;
-        
+    --lightGreen: #d4e9c9;
+    
+  
+      /* Typography */
+      --importantFont: "ADLaM Display", system-ui;
+      --regFont: "Figtree", sans-serif;
+      --font-title : 6.5vw;
 
 }
 
@@ -81,23 +86,86 @@ Icon Hosting Google */
 
   @media (max-width: 480px) {
 
+
     html {
         background-color: var(--baseWhite);
     }
 
     body {
-        margin: 0;
-      }
+      margin: 0;
+      padding: 0;
+    }
 
+
+
+    img{
+      width: 100%;
+      height: auto;
+      border-radius: 15px;
+    }
+
+    h1{
+      font-family: var(--importantFont);
+      color: var(--darkBlue);
+      text-align: center;
+      text-decoration: underline solid var(--lightBlue);
+      text-underline-offset: 4px;
+
+    }
+
+    h3 {
+      font-family: var(--importantFont);
+      color: var(--darkBlue);
+      text-align: center;
+      
+    }
+
+    p {
+      font-family: var(--regFont);
+      color: var(--darkBlue);
+    }
+
+    ul li {
+      margin: 1px 0;
+    }
+
+    ul {
+      margin-top: 2px;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    header {
+      width: 100%;
+      background-color: var(--darkBlue);
+      color: var(--baseWhite);
+      padding: 15px; /* Add spacing inside the header */
+      box-sizing: border-box;
+      margin-bottom: 20px;
+      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+      
+
+  }
 
     nav{
       display: flex;
       flex-direction: row;
       align-items: center;
       justify-content: space-between;
-      height: 100%;
-      padding-left: .5rem;
-      padding-right: .5rem;
+
+
 
     }
 
@@ -105,26 +173,22 @@ Icon Hosting Google */
       display: flex;
       flex-direction: row;
       justify-content: flex-end;
+      padding-left: .5rem;
+      padding-right: .5rem;
     }
     
     .bigThree span{
       padding: 7px;
     }
       
-      
-
   
-    header {
-        background-color: var(--darkBlue);
-        color: var(--baseWhite);
-        height: 88px;
-
-
-    }
+  
 
     .logo {
       align-items: center;
       justify-content: center;
+      padding-left: .5rem;
+      padding-right: .5rem;
     }
 
     .logo img{
@@ -132,4 +196,373 @@ Icon Hosting Google */
         height: 80px;
         padding-left: .4rem;
     }
+  
+  .dropDown{
+    display: none;
+    text-align: center;
+    width: 100%;
+    position: absolute;
+    z-index: 10;
+    background-color: var(--darkBlue);
+    padding: .7rem .7rem;
+    bottom: -180px;
+    right: 0px;
+
   }
+
+  .navLinks a{
+    display: flex;
+    flex-direction: column;
+    font-family: var(--importantFont);
+    color: var(--baseWhite);
+  }
+
+
+  .show {
+    display: block; 
+}
+
+.circles{
+  margin: auto 0;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+  
+  
+
+
+}
+.circles img {
+  border-radius: 50%;
+  height: 84px;
+  width: auto;
+  border: 5px solid var(--darkGreen); 
+  
+}
+figure {
+  text-align: center;
+  font-size: 1rem;
+  color: var(--darkBlue);
+  font-family: var(--importantFont);
+  display: table;
+  margin: auto 0;
+}
+
+figcaption { 
+  display: table-caption; 
+  caption-side: bottom ;
+
+}
+.orderNow figcaption {
+  white-space: nowrap;
+  
+}
+
+.orderNow img{
+  border: 5px solid var(--darkGreen); 
+
+}
+  
+
+.businessHours {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  color: var(--baseWhite);
+  background-color: var(--lightBlue);
+  padding: 7px 7px;
+}
+
+.busInfo {
+  z-index: 2;
+  background-color: rgba(43, 69, 112, 0.74); /* Semi-transparent */
+  width: 290px;
+  height: auto;
+  position: absolute;
+  color: var(--baseWhite);
+  border-radius: 5px;
+  text-align: center;
+  font-family: var(--regFont);
+  padding-bottom: 1rem;
+
+}
+.busInfo p {
+  opacity: 1;
+  margin-bottom: .3rem;
+  margin-top: .3rem;
+  color: var(--baseWhite);
+}
+
+.busInfo h3 {
+  color: var(--baseWhite);
+
+}
+
+
+.slogan{
+  word-wrap: normal;
+  white-space: nowrap;
+  color: var(--darkBlue);
+  margin: 10px 7px;
+  font-size: 6.5vw;
+  text-align: center;
+}
+
+blockquote{
+  text-align: center;
+  font-family: var(--regFont);
+  font-size: 1rem;
+  color: var(--darkBlue);
+  white-space: normal;
+  word-wrap: break-word;
+  margin-left: 6px;
+  margin-right: 6px;
+  margin-bottom: 20px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  
+}
+
+.about {
+  margin-top: 20px;
+  background-color: var(--darkGreen);
+  padding: 7px 7px;
+}
+
+.aboutUs {
+  margin-top: 20px;
+  background-color: var(--baseWhite);
+  border-radius: 5px;
+  padding: 20px;
+  color: var(--darkBlue);
+  text-align: center;
+}
+
+.aboutUs p {
+  font-family: var(--regFont);
+}
+
+article.aboutUs section:nth-of-type(2) {
+  padding-bottom: 30px;
+}
+
+.button {
+  display: flex;
+  justify-self: end;
+
+}
+.aboutUs button{
+  width: 84px;
+  height: 84px; /* Set width */ /* Set height */
+  border-radius: 50%; /* Make the button circular */
+  background-color: var(--lightBlue); /* Background color */
+  color: var(--darkBlue); /* Text color */
+  font-family: var(--regFont);
+  border: none; /* Remove border */
+  display: flex; /* Flexbox for centering content */
+  justify-content: center; /* Center the text horizontally */
+  align-items: center; /* Center the text vertically */
+
+
+}
+.button-link {
+  text-decoration: none; /* Removes default link underline */
+}
+
+
+
+
+/* about section */
+  .missionState {
+    background-color: var(--darkGreen);
+    z-index: 2;
+    text-align: center;
+    color: var(--baseWhite);
+    padding: 25px 20px;
+
+    
+  }
+  .missionState p {
+    color: var(--baseWhite);
+  
+  }
+
+
+  .contact {
+    margin-bottom: 30px;
+
+  }
+  .contact h1{
+    font-size: 1rem;
+  }
+
+  .contact p {
+    margin-bottom: .3rem;
+    margin-top: .3rem;
+    text-align: center;
+  }
+
+  .contact address {
+    margin-bottom: 0.3rem;
+    margin-top: 0.3rem;
+    text-align: center; /* Centers the text inside the <address> */
+    color: var(--darkBlue);
+    font-family: var(--regFont);
+  }
+
+  .mainAbt {
+    background-color: var(--lightBlue);
+    padding: 7px 7px;
+    padding-bottom: 30px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  }
+
+
+  
+  .mainAbt article {
+    margin-top: 20px;
+    background-color: var(--baseWhite);
+    border-radius: 5px;
+    padding: 20px;
+    color: var(--darkBlue);
+    text-align: center;
+
+  }
+
+  .mainAbt button {
+  margin-top: 30px;
+  width: 150px;
+  height: auto; /* Set width */ /* Set height */
+  border-radius: 3px; /* Make the button circular */
+  background-color: var(--darkGreen); /* Background color */
+  color: var(--baseWhite); /* Text color */
+  font-family: var(--regFont);
+  border: none; /* Remove border */
+  text-transform: uppercase;
+  word-wrap: normal;
+  white-space: nowrap;
+  padding: 10px 10px;
+}
+
+.meetUs h3 {
+  margin-bottom: 30px;
+}
+
+
+.meetUs img{
+  height: 20vh;
+  width: 20vh;
+  border-radius: 50%;
+  border: 5px solid var(--darkGreen);
+}
+
+
+.bee {
+  display: flex;
+  flex-direction: row;
+  margin-left: 5px;
+  margin-bottom: 20px;
+
+}
+
+.bop {
+  display: flex; /* Enables flexbox */
+  flex-direction: column;
+  justify-content: center; /* Centers horizontally */
+  padding-left: 27px;
+  border: 5px solid var(--darkBlue);
+  border-right: none;
+  width: 100%;
+  height: auto;
+  border-top-left-radius: 50%; 
+  border-bottom-left-radius: 50%;
+  margin-left: 25px;
+  word-wrap: normal;
+  white-space: nowrap;
+}
+
+.bop p {
+  font-size: 1rem;
+  margin-bottom: .3rem;
+  margin-top: .3rem;
+
+}
+
+.bul {
+  background-color: var(--lightGreen);
+  margin: 17px 17px;
+  border-radius: 5px;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  padding: 5px 5px;
+  padding-right: 10px;
+  font-size: .9rem;
+}
+
+.meetUs section > p {
+  /* Styles for the specific <p> tags */
+  padding: 13px;
+  padding-top: 0rem;
+  padding-bottom: .3rem;
+  margin-bottom: 0rem;
+  margin-top: 0rem;
+
+}
+
+.meetUs section {
+  margin-bottom: 30px;
+}
+  
+
+/* Menu section */
+.menu {
+  margin-top: 10px;
+  background-color: var(--lightBlue);
+  margin-top: 0px;
+  padding-bottom: 25px;
+}
+
+.menu h3 {
+  padding: 10px;
+  margin-bottom: 0px;
+}
+
+.item{
+  background-color: var(--baseWhite);
+  border-radius: 15px;
+  margin: 7px 7px;
+  padding: 11px 11px;
+}
+
+
+.itemDes {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.item p{
+  margin-bottom: 0.4rem;
+  margin-top: 0.3rem;
+}
+
+.item button {
+  border-radius: 50%;
+  color: var(--baseWhite);
+  background-color: var(--darkBlue);
+  filter: drop-shadow(2px 4px 2px rgba(0, 0, 0, 0.25));
+  margin-left: 6px;
+}
+
+
+
+
+
+
+
+
+
+}
