--- a/IDM-221/CSS/base.css
+++ b/IDM-221/CSS/base.css
@@ -72,7 +72,6 @@ Icon Hosting Google */
 
 .figtree-reg {
     font-family: "Figtree", sans-serif;
-    font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
   }
@@ -354,7 +353,7 @@ article.aboutUs section:nth-of-type(2) {
   justify-self: end;
 
 }
-.aboutUs button{
+.button-link{
   width: 84px;
   height: 84px; /* Set width */ /* Set height */
   border-radius: 50%; /* Make the button circular */
